<!--
  ~ Copyright (c) 2016.
  ~
  ~ DReflect and Minuku Libraries by Shriti Raj (shritir@umich.edu) and Neeraj Kumar(neerajk@uci.edu) is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.
  ~ Based on a work at https://github.com/Shriti-UCI/Minuku-2.
  ~
  ~
  ~ You are free to (only if you meet the terms mentioned below) :
  ~
  ~ Share — copy and redistribute the material in any medium or format
  ~ Adapt — remix, transform, and build upon the material
  ~
  ~ The licensor cannot revoke these freedoms as long as you follow the license terms.
  ~
  ~ Under the following terms:
  ~
  ~ Attribution — You must give appropriate credit, provide a link to the license, and indicate if changes were made. You may do so in any reasonable manner, but not in any way that suggests the licensor endorses you or your use.
  ~ NonCommercial — You may not use the material for commercial purposes.
  ~ ShareAlike — If you remix, transform, or build upon the material, you must distribute your contributions under the same license as the original.
  ~ No additional restrictions — You may not apply legal terms or technological measures that legally restrict others from doing anything the license permits.
  -->

<resources>
    <!--  current_task: PART ESM CAR Ohio  -->
    <string name="current_task">ESM</string>

    <string name="app_name">pseudoMinuku2</string>
    <string name="ok">OK</string>
    <string name="permission_location_rationale">The app needs location for context</string>
    <string name="squarecamera__app_name">Minuku</string>
    <string name="action_logout">Logout</string>
    <!-- Instructions and Loading Text -->
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_authenticating_with_firebase">Authenticating with Firebase…</string>
    <string name="progress_dialog_creating_user_with_firebase">Attempting to create account…</string>
    <string name="progress_dialog_check_inbox">Please check your inbox for your password</string>
    <string name="progress_dialog_account_creation_closure">Your account has been created</string>

    <!-- Errors -->
    <string name="dialog_title_error">Error</string>
    <string name="error_message_failed_sign_in_no_network">There was a problem with the network connection.\nAre you sure you\'re connected to the internet?</string>
    <string name="log_error_invalid_provider">"Invalid provider: "</string>
    <string name="log_error_failed_to_change_password">"Failed to change the password: "</string>
    <string name="error_invalid_email_not_valid">%s is not a valid email</string>
    <string name="error_message_email_issue">There was an error with your email; please check that you entered it correctly.</string>
    <string name="error_you_didnt_give_permissions">You must give ShoppingList++ permission to access your Google account information if you want to use Google sign-in.</string>
    <string name="error_email_taken">The email is already taken.</string>
    <string name="error_invalid_password_not_valid">Please enter a password that is at least 6 characters long.</string>
    <string name="error_cannot_be_empty">This cannot be empty.</string>
    <!-- Google Errors -->
    <string name="google_error_recoverable_oauth_error">"Recoverable Google OAuth error: "</string>
    <string name="google_error_google_play_services_not_available">Google Play Services are not available.</string>
    <string name="google_error_trying_to_connect_google_api">Trying to connect to Google API</string>
    <string name="google_error_auth_with_google">"Error authenticating with Google: "</string>
    <string name="google_error_network_error">"Network error: "</string>
    <string name="google_error_cant_connect_to_api">Are you sure that you set up a project for your app?
        Check out : https://console.developers.google.com/project. Also make sure you have all the proper
    gradle dependencies</string>


    <!-- OAuth Format -->
    <string name="oauth2_format">oauth2:%s</string>

    <!-- Log Messages -->
    <string name="log_message_password_changed_successfully">Password changed successfully from temporary password to </string>
    <string name="log_message_auth_successful">auth successful.</string>

    <string name="title_activity_create_account">Create Account</string>
    <!-- Login and Create Account Screen  -->
    <string name="text_dont_have_account">Don\'t have an account?</string>
    <string name="text_already_have_account">Already have an account?</string>
    <string name="button_create_account">Sign Up</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_signin_with_google">SIGN IN WITH GOOGLE</string>
    <string name="button_signin_with_password">SIGN IN</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_enter_firstname">Enter your First name</string>
    <string name="hint_enter_lastname">Enter your Last name</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="password_requirement">Password must have a number, a small letter, a capital letter, and a symbol(@#$%^+=)</string>
    <string name="image_view_logo_image">Logo Image</string>
    <string name="tv_forgot_your_password">Forgot your password?</string>
    <string name="tv_text_reset_password">Send Password Reset Email</string>

    <string name="text_login_via">Login using</string>
    <string name="start_using_dreflect">Start Dreflect</string>
    <string name="before_we_start_text">Before we start, could you please give us the following information</string>


    <string-array name="prompt_missed_reasons_arrays">
        <item>I didn\'t get time</item>
        <item>I was too low and tired!</item>
        <item>I don\'t give a damn!</item>
    </string-array>

</resources>
